Replace albums routes with users routes
